# my-first-ai-slop

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
